[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "md-live"
version = "0.1.0"
description = "Live markdown preview in your browser, straight from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ericwestphal/md-live"

[project.scripts]
md-live = "md_live:main"

[tool.setuptools]
py-modules = ["md_live"]
